Spacings, Margins and Paddings fixed for Contact

--- a/src/CSS/ContactUs.css
+++ b/src/CSS/ContactUs.css
@@ -4,17 +4,23 @@
 }
 
 .pict-map {
-    min-height: calc(100vh - 71px);
+    margin-top: 8vh;
+    min-height: 92vh;
     padding: 0px;
     filter: invert(90%);
 }
 
 .getintouch {
-    padding-top: 2%;
+    padding-top: 8vh;
     font-size: xx-large;
     font-weight: 800;
 }
 
+.feedbkfrm {
+    padding-top: 10px;
+    font-size: xx-large;
+    font-weight: 800;
+}
 .maillink {
     font-size: 0.75rem;
 }
@@ -22,30 +28,42 @@
 .contactppl {
     text-align: center;
     font-size: 1.2rem;
+    justify-content: center;
 }
 
 .pplimages {
-    padding: 0.5vw;
-    margin: 1vw;
+    padding: 3px;
     border: 2px solid #FF5001;
 }
 
 .subbutton {
-    background-color: #FF5001;
-    border-color: #FF5001;
+    background-color: #FF5001 !important;
+    border-color: #FF5001 !important;
 }
 
 @media screen and (min-width: 1330px ) {
-    .contactppl {
-        font-size: 1.5rem;
-    }
 
     .maillink {
         font-size: 1rem;
     }
 }
 
+@media screen and (max-width: 575px ) {
+    .pplimages {
+        max-width: 200px;
+    }
+}
+
 .fdbkfrm {
     background-color: #050505 !important;
     color: #AAA !important;
+}
+
+.socialicons svg {
+    color: #FF5001;
+    width: 100%;
+}
+
+.socialicons .col {
+    padding: 0 5%;
 }
